--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <div class="col-lg-5 col-12 position-relative">
                             <div class="hero-image-wrap"></div>
                             <div class="image-hero">
-                                <img src="img/developer.webp" class="hero-image img-fluid cuys" style="min-width: 0 !important;" alt="">
+                                <img src="img/developer.webp" class="hero-image img-fluid cuys" style="min-width: 0 !important;" alt="isulalifajri">
                             </div>
                         </div>
 
@@ -186,7 +186,7 @@
                     <div class="row">
 
                         <div class="col-lg-6 col-12 js-scroll slide-left" style="cursor:pointer;":c>
-                            <img src="img/webdev.jpg" class="about-image img-fluid" alt="">
+                            <img src="img/webdev.jpg" class="about-image img-fluid" alt="webdev">
                         </div>
 
                         <div class="col-lg-6 col-12 mt-5 mt-lg-0">
@@ -195,7 +195,7 @@
                                 <div class="section-title-wrap d-flex justify-content-end align-items-center mb-4 js-scroll fade-in-top">
                                     <h2 class="text-white me-4 mb-0">My Story</h2>
 
-                                    <img src="img/heningsunyi.jpg" class="avatar-image img-fluid" alt="">
+                                    <img src="img/heningsunyi.jpg" class="avatar-image img-fluid" alt="isulalifajri">
                                 </div>
 
                                 <h3 class="card-1 pt-2 mb-3 js-scroll slide-right">Sedikit Tentang Saya</h3>
@@ -226,8 +226,8 @@
                         <div class="col-lg-6 col-6 m-auto auwoo">
                             <div class="swiper swiper-work">
                                 <div class="swiper-wrapper">
-                                    <a href="#" class="swiper-slide"><img src="image-workplace/logo-bank-jatim.jpg" class="clients-image image1 img-fluid text-center" alt=""></a>
-                                    <a href="#" class="swiper-slide"><img src="image-workplace/fruitylogic.png" class="clients-image image1 img-fluid text-center" alt=""></a>
+                                    <a href="#" class="swiper-slide"><img src="image-workplace/logo-bank-jatim.jpg" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
+                                    <a href="#" class="swiper-slide"><img src="image-workplace/fruitylogic.png" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
                                 </div>
                             </div>
                         </div>
@@ -457,39 +457,39 @@
                         <div class="col-lg-12 col-lg-12 mt-3">
                             <div class="d-flex flex-wrap justify-content-center mb-4 js-scroll fade-in-top" style="gap:20px">
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/office.png" class="images-skill p-2" alt="">
+                                    <img src="images/skill/office.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
                                     <h3 class="pe-5 text-white">Microsoft Office</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/html5.png" class="images-skill p-2" alt="">
+                                    <img src="images/skill/html5.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
                                     <h3 class="pe-5 text-white">HTML</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/css-3.png" class="images-skill p-2" alt="">
+                                    <img src="images/skill/css-3.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
                                     <h3 class="pe-5 text-white">CSS</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/bootstrap.png" class="images-skill p-2" alt="">
+                                    <img src="images/skill/bootstrap.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
                                     <h3 class="pe-5 text-white">Bootstrap</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/js.png" class="images-skill p-2" alt="">
+                                    <img src="images/skill/js.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
                                     <h3 class="pe-5 text-white">Javascript</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/php.png" class="images-skill p-2" alt="">
+                                    <img src="images/skill/php.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
                                     <h3 class="pe-5 text-white">PHP</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/laravel.png" class="images-skill p-2" alt="">
+                                    <img src="images/skill/laravel.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
                                     <h3 class="pe-5 text-white">Laravel</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/codeigniter.png" class="images-skill p-2" alt="">
+                                    <img src="images/skill/codeigniter.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
                                     <h3 class="pe-5 text-white">Codeigniter</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/MySQL.png" class="images-skill p-2" alt="">
+                                    <img src="images/skill/MySQL.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
                                     <h3 class="pe-5 text-white">MySQL</h3>
                                 </div>
                             </div>
