--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 
                         <div class="col-lg-8 col-md-8 col-12 ms-auto js-scroll fade-in">
                             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-4">
-                                <img src="images/certification.webp" class="avatar-image img-fluid" alt="">
+                                <img src="images/certification.webp" class="avatar-image img-fluid" alt="certifiation isulalifajri">
 
                                 <h2 class="text-white ms-4 mb-0">Sertifikasi</h2>
                             </div>
@@ -517,7 +517,7 @@
                                 </div>
 
                                 <a href="./img/develop-web.jpg" class="popup-image">
-                                    <img src="./img/develop-web.jpg" class="projects-image img-fluid" alt="">
+                                    <img src="./img/develop-web.jpg" class="projects-image img-fluid" height="auto" weight="auto" alt="certifiation isulalifajri">
                                 </a>
                             </div>
                         </div>
@@ -531,7 +531,7 @@
                                 </div>
 
                                 <a href="img/sertifikatlsp.jpg" class="popup-image">
-                                    <img src="img/sertifikatlsp.jpg" class="projects-image img-fluid" alt="">
+                                    <img src="img/sertifikatlsp.jpg" class="projects-image img-fluid" height="auto" weight="auto" alt="certifiation isulalifajri">
                                 </a>
                             </div>
                         </div>
@@ -545,7 +545,7 @@
                                 </div>
 
                                 <a href="img/msoffice.jpg" class="popup-image">
-                                    <img src="img/msoffice.jpg" class="projects-image img-fluid" alt="">
+                                    <img src="img/msoffice.jpg" class="projects-image img-fluid" height="auto" weight="auto" alt="certification isulalifajri">
                                 </a>
                             </div>
                         </div>
