--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
                         <div class="col-lg-10 col-12 mx-auto">
                             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5 js-scroll fade-in">
-                                <img src="images/handshake-man-woman-after-signing-business-contract-closeup.jpg" class="avatar-image img-fluid" alt="">
+                                <img src="images/handshake-man-woman-after-signing-business-contract-closeup.jpg" class="avatar-image img-fluid" alt="project isulalifajri">
 
                                 <h2 class="text-white ms-4 mb-0">Project</h2>
                             </div>
@@ -447,7 +447,7 @@
 
                         <div class="col-lg-8 col-md-8 col-12 js-scroll fade-in">
                             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-4">
-                                <img src="images/white-desk-work-study-aesthetics.jpg" class="avatar-image img-fluid" alt="">
+                                <img src="images/white-desk-work-study-aesthetics.jpg" class="avatar-image img-fluid" alt="skill">
 
                                 <h2 class="text-white ms-4 mb-0">Skill</h2>
                             </div>
@@ -560,7 +560,7 @@
 
                             <div class="col-lg-6 col-md-8 col-12 m-auto js-scroll fade-in">
                                 <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
-                                    <img src="images/aerial-view-man-using-computer-laptop-wooden-table.jpg" class="avatar-image img-fluid" alt="">
+                                    <img src="images/aerial-view-man-using-computer-laptop-wooden-table.jpg" class="avatar-image img-fluid" alt="hi">
 
                                     <h2 class="text-white ms-4 mb-0">Hi!</h2>
                                 </div>
@@ -652,7 +652,7 @@
                     <div class="col-lg-12 col-12">
                         <div class="copyright-text-wrap">
                             <p class="mb-0">
-                                <span class="">© 2022 <a href="#">Portfolio Isul Alifajri</a> All rights reserved.</span><br>
+                                <span class="">© 2021 <a href="#">Portfolio Isul Alifajri</a> All rights reserved.</span><br>
                                 Design Edited: 
                                 <a rel="sponsored" href="#">By Isul Alifajri</a>
                             </p>
