--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                             <h3 class="mb-0">Project 1</h3>
 
                                             <div class="services-price-wrap ms-auto">
-                                                <p class="services-price-text mb-0 code"><img src="icons-programs/codeigniter.png" class="hover-code" alt=""></p>
+                                                <p class="services-price-text mb-0 code"><img src="icons-programs/codeigniter.png" class="hover-code" alt="codeigniter"></p>
                                                 <div class="services-price-overlay"></div>
                                             </div>
                                         </div>
@@ -265,22 +265,22 @@
                                             <div class="swiper-wrapper">
                                                 <div class="img-new-prj mb-2 swiper-slide">
                                                     <a data-fslightbox href="project-images/project1-img-frontend1.jpg">
-                                                        <img src="project-images/project1-img-frontend1.jpg" alt="">
+                                                        <img src="project-images/project1-img-frontend1.jpg" alt="image-project-1">
                                                     </a>
                                                 </div>
                                                 <div class="img-new-prj mb-2 swiper-slide">
                                                     <a data-fslightbox href="project-images/project1-img-frontend2.jpg">
-                                                        <img src="project-images/project1-img-frontend2.jpg" alt="">
+                                                        <img src="project-images/project1-img-frontend2.jpg" alt="image-project-1">
                                                     </a>
                                                 </div>
                                                 <div class="img-new-prj mb-2 swiper-slide">
                                                     <a data-fslightbox href="project-images/project1-img-backend1.jpg">
-                                                        <img src="project-images/project1-img-backend1.jpg" alt="">
+                                                        <img src="project-images/project1-img-backend1.jpg" alt="image-project-1">
                                                     </a>
                                                 </div>
                                                 <div class="img-new-prj mb-2 swiper-slide">
                                                     <a data-fslightbox href="project-images/project1-img-backend2.jpg">
-                                                        <img src="project-images/project1-img-backend2.jpg" alt="">
+                                                        <img src="project-images/project1-img-backend2.jpg" alt="image-project-1">
                                                     </a>
                                                 </div>
                                             </div>
@@ -302,7 +302,7 @@
                                             <h3 class="mb-0">Project 2</h3>
 
                                             <div class="services-price-wrap ms-auto">
-                                                <p class="services-price-text mb-0 code"><img src="icons-programs/laravel.png" class="hover-code" alt=""></p>
+                                                <p class="services-price-text mb-0 code"><img src="icons-programs/laravel.png" class="hover-code" alt="laravel"></p>
                                                 <div class="services-price-overlay"></div>
                                             </div>
                                         </div>
@@ -311,22 +311,22 @@
                                             <div class="swiper-wrapper">
                                                 <div class="img-new-prj mb-2 swiper-slide">
                                                     <a data-fslightbox href="project-images2/project2-img-frontend.png">
-                                                        <img src="project-images2/project2-img-frontend.png" alt="">
+                                                        <img src="project-images2/project2-img-frontend.png" alt="img project 2">
                                                     </a>
                                                 </div>
                                                 <div class="img-new-prj mb-2 swiper-slide">
                                                     <a data-fslightbox href="project-images2/project2-img-frontend2.png">
-                                                        <img src="project-images2/project2-img-frontend2.png" alt="">
+                                                        <img src="project-images2/project2-img-frontend2.png" alt="img project 2">
                                                     </a>
                                                 </div>
                                                 <div class="img-new-prj mb-2 swiper-slide">
                                                     <a data-fslightbox href="project-images2/project2-img-backend2.png">
-                                                        <img src="project-images2/project2-img-backend2.png" alt="">
+                                                        <img src="project-images2/project2-img-backend2.png" alt="img project 2">
                                                     </a>
                                                 </div>
                                                 <div class="img-new-prj mb-2 swiper-slide">
                                                     <a data-fslightbox href="project-images2/project2-img-backend1.png">
-                                                        <img src="project-images2/project2-img-backend1.png" alt="">
+                                                        <img src="project-images2/project2-img-backend1.png" alt="img project 2">
                                                     </a>
                                                 </div>
                                             </div>
@@ -348,7 +348,7 @@
                                             <h3 class="mb-0">Project 3</h3>
 
                                             <div class="services-price-wrap ms-auto">
-                                                <p class="services-price-text mb-0 code"><img src="icons-programs/html-css-js.png" class="hover-code" alt=""></p>
+                                                <p class="services-price-text mb-0 code"><img src="icons-programs/html-css-js.png" class="hover-code" alt="html css js"></p>
                                                 <div class="services-price-overlay"></div>
                                             </div>
                                         </div>
@@ -357,22 +357,22 @@
                                             <div class="swiper-wrapper">
                                                 <div class="img-new-prj mb-2 swiper-slide">
                                                     <a data-fslightbox href="project-images3/project-3-img2.png">
-                                                        <img src="project-images3/project-3-img2.png" alt="">
+                                                        <img src="project-images3/project-3-img2.png" alt="img project 3">
                                                     </a>
                                                 </div>
                                                 <div class="img-new-prj mb-2 swiper-slide">
                                                     <a data-fslightbox href="project-images3/project-3-img3.png">
-                                                        <img src="project-images3/project-3-img3.png" alt="">
+                                                        <img src="project-images3/project-3-img3.png" alt="img project 3">
                                                     </a>
                                                 </div>
                                                 <div class="img-new-prj mb-2 swiper-slide">
                                                     <a data-fslightbox href="project-images3/project-3-img4.png">
-                                                        <img src="project-images3/project-3-img4.png" alt="">
+                                                        <img src="project-images3/project-3-img4.png" alt="img project 3">
                                                     </a>
                                                 </div>
                                                 <div class="img-new-prj mb-2 swiper-slide">
                                                     <a data-fslightbox href="project-images3/project-3-img5.png">
-                                                        <img src="project-images3/project-3-img5.png" alt="">
+                                                        <img src="project-images3/project-3-img5.png" alt="img project 3">
                                                     </a>
                                                 </div>
                                             </div>
@@ -394,7 +394,7 @@
                                             <h3 class="mb-0">Project 4</h3>
 
                                             <div class="services-price-wrap ms-auto">
-                                                <p class="services-price-text mb-0 code"><img src="icons-programs/laravel.png" class="hover-code" alt=""></p>
+                                                <p class="services-price-text mb-0 code"><img src="icons-programs/laravel.png" class="hover-code" alt="laravel"></p>
                                                 <div class="services-price-overlay"></div>
                                             </div>
                                         </div>
@@ -403,22 +403,22 @@
                                             <div class="swiper-wrapper">
                                                 <div class="img-new-prj mb-2 swiper-slide">
                                                     <a data-fslightbox href="project-images4/storenits/frontend/frontend-storenits-1.jpg">
-                                                        <img src="project-images4/storenits/frontend/frontend-storenits-1.jpg" alt="">
+                                                        <img src="project-images4/storenits/frontend/frontend-storenits-1.jpg" alt="img project 4">
                                                     </a>
                                                 </div>
                                                 <div class="img-new-prj mb-2 swiper-slide">
                                                     <a data-fslightbox href="project-images4/storenits/frontend/frontend-storenits-2.jpg">
-                                                        <img src="project-images4/storenits/frontend/frontend-storenits-2.jpg" alt="">
+                                                        <img src="project-images4/storenits/frontend/frontend-storenits-2.jpg" alt="img project 4">
                                                     </a>
                                                 </div>
                                                 <div class="img-new-prj mb-2 swiper-slide">
                                                     <a data-fslightbox href="project-images4/storenits/frontend/frontend-storenits-3.jpg">
-                                                        <img src="project-images4/storenits/frontend/frontend-storenits-3.jpg" alt="">
+                                                        <img src="project-images4/storenits/frontend/frontend-storenits-3.jpg" alt="img project 4">
                                                     </a>
                                                 </div>
                                                 <div class="img-new-prj mb-2 swiper-slide">
                                                     <a data-fslightbox href="project-images4/storenits/frontend/frontend-storenits-4.jpg">
-                                                        <img src="project-images4/storenits/frontend/frontend-storenits-4.jpg" alt="">
+                                                        <img src="project-images4/storenits/frontend/frontend-storenits-4.jpg" alt="img project 4">
                                                     </a>
                                                 </div>
                                             </div>
@@ -457,39 +457,39 @@
                         <div class="col-lg-12 col-lg-12 mt-3">
                             <div class="d-flex flex-wrap justify-content-center mb-4 js-scroll fade-in-top" style="gap:20px">
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/office.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
+                                    <img src="images/skill/office.png" class="images-skill p-2" alt="skill isulalifajri" height="99">
                                     <h3 class="pe-5 text-white">Microsoft Office</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/html5.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
+                                    <img src="images/skill/html5.png" class="images-skill p-2" alt="skill isulalifajri" height="99">
                                     <h3 class="pe-5 text-white">HTML</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/css-3.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
+                                    <img src="images/skill/css-3.png" class="images-skill p-2" alt="skill isulalifajri" height="99">
                                     <h3 class="pe-5 text-white">CSS</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/bootstrap.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
+                                    <img src="images/skill/bootstrap.png" class="images-skill p-2" alt="skill isulalifajri" height="99">
                                     <h3 class="pe-5 text-white">Bootstrap</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/js.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
+                                    <img src="images/skill/js.png" class="images-skill p-2" alt="skill isulalifajri" height="99">
                                     <h3 class="pe-5 text-white">Javascript</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/php.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
+                                    <img src="images/skill/php.png" class="images-skill p-2" alt="skill isulalifajri" height="99">
                                     <h3 class="pe-5 text-white">PHP</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/laravel.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
+                                    <img src="images/skill/laravel.png" class="images-skill p-2" alt="skill isulalifajri" height="99">
                                     <h3 class="pe-5 text-white">Laravel</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/codeigniter.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
+                                    <img src="images/skill/codeigniter.png" class="images-skill p-2" alt="skill isulalifajri" height="99">
                                     <h3 class="pe-5 text-white">Codeigniter</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
-                                    <img src="images/skill/MySQL.png" class="images-skill p-2" alt="skill isulalifajri" width="auto" height="99">
+                                    <img src="images/skill/MySQL.png" class="images-skill p-2" alt="skill isulalifajri" eight="99">
                                     <h3 class="pe-5 text-white">MySQL</h3>
                                 </div>
                             </div>
