--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
                 <div class="container">
                     <div class="row">
 
-                        <div class="col-lg-6 col-12 js-scroll slide-left" style="cursor:pointer;":c>
-                            <img src="img/webdev.jpg" class="about-image img-fluid" alt="webdev">
+                        <div class="col-lg-6 col-12 js-scroll slide-left" style="cursor:pointer;">
+                            <img src="img/webdev.jpg" class="about-image img-fluid" alt="webdev" width="640" height="480">
                         </div>
 
                         <div class="col-lg-6 col-12 mt-5 mt-lg-0">
