--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                                 </div>
 
                                 <a href="./img/develop-web.jpg" class="popup-image">
-                                    <img src="./img/develop-web.jpg" class="projects-image img-fluid" height="auto" weight="auto" alt="certifiation isulalifajri">
+                                    <img src="./img/develop-web.jpg" class="projects-image img-fluid" width="640" height="480" alt="certifiation isulalifajri">
                                 </a>
                             </div>
                         </div>
@@ -531,7 +531,7 @@
                                 </div>
 
                                 <a href="img/sertifikatlsp.jpg" class="popup-image">
-                                    <img src="img/sertifikatlsp.jpg" class="projects-image img-fluid" height="auto" weight="auto" alt="certifiation isulalifajri">
+                                    <img src="img/sertifikatlsp.jpg" class="projects-image img-fluid" width="640" height="480" alt="certifiation isulalifajri">
                                 </a>
                             </div>
                         </div>
@@ -545,7 +545,7 @@
                                 </div>
 
                                 <a href="img/msoffice.jpg" class="popup-image">
-                                    <img src="img/msoffice.jpg" class="projects-image img-fluid" height="auto" weight="auto" alt="certification isulalifajri">
+                                    <img src="img/msoffice.jpg" class="projects-image img-fluid" width="640" height="480" alt="certification isulalifajri">
                                 </a>
                             </div>
                         </div>
