--- a/project/project-4.html
+++ b/project/project-4.html
@@ -29,7 +29,7 @@
         <link rel="canonical" href="https://isulalifajri.github.io/project/project-4.html" />
         <meta property="og:locale" content="id_ID" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Programmer Web Portofolio Isul Alifajri Izul Alifajri" />
+        <meta property="og:title" content="Portofolio Isul Alifajri Izul Alifajri" />
         <meta property="og:description" content="Ini Adalah Portofolio Isul Alifajri Izul Alifajri yang di buat untuk menampilkan sedikit keahlian saya dalam bahasa pemgrograman" />
         <meta property="og:url" content="https://isulalifajri.github.io/project/project-4.html" />
         <meta property="og:site_name" content="Isul Alifajri Portofolio" />
