--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <meta property="og:description" content="Ini Adalah Portofolio Isul Alifajri Izul Alifajri yang di buat untuk menampilkan sedikit keahlian saya dalam bahasa pemgrograman" />
         <meta property="og:url" content="https://isulalifajri.github.io/" />
         <meta property="og:site_name" content="Isul Alifajri Portofolio" />
-        <meta property="og:image" content="img/foto.jpeg" />
+        <!-- <meta property="og:image" content="img/foto.jpeg" />
         <meta property="og:image:width" content="400" />
         <meta property="og:image:height" content="500" />
-        <meta property="og:image:type" content="image/jpeg" />
+        <meta property="og:image:type" content="image/jpeg" /> -->
         
         <meta name="google-site-verification" content="X-CcHFSDLlhnm_KEE_lpJMWjdlQb32FJMTzfxt8adb4" />
 
