--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
            .swiper-new .swiper-button-next:after, .swiper-new .swiper-button-prev:after{
                 font-size: 20px;
            }
+
         </style>
 
 
@@ -161,6 +162,7 @@
 
                                 <h2 class="mb-4 text-2">Perkenalkan Nama Saya Isul Alifajri</h2>
                                 <h2 class="mb-4 text-animate">Saya Seorang <span class="typing"></span></h2>
+
                                 <p class="mb-4">
                                     <a class="custom-btn btn custom-link seeu" href="#section_2" style="visibility: hidden;">Lihat Selengkapnya..</a>
                                 </p>
@@ -693,13 +695,20 @@
         <script>
             $(document).ready(function(){
              var typed = new Typed(".typing", {
-                    strings:["Web Developer","Freelancer"],
+                    strings:["Web Developer"],
                     typeSpeed:100,
                     backSpeed:60,
                     loop:true
                 })
             })
         </script>
+
+        
+
+
+
+        </script>
+        
 
         <script>
             const heading = document.querySelector('.cuyss');
@@ -837,7 +846,6 @@
 
             <!-- fslightbox cdn js link -->
             <script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js"></script>
-
             <!-- Default Statcounter code for My Portfolio Website
             https://isulalifajri.github.io/ -->
             <script type="text/javascript">
