--- a/project/project-4.html
+++ b/project/project-4.html
@@ -210,6 +210,7 @@
                                     <a data-fslightbox href="../project-images4/storenits/storenits-18.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-18.png" class="img-fluid" alt=""></a>
                                     <a data-fslightbox href="../project-images4/storenits/storenits-19.png" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-19.png" class="img-fluid" alt=""></a>
                                     <a data-fslightbox href="../project-images4/storenits/storenits-20.jpg" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-20.jpg" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images4/storenits/storenits-21.JPG" class="swiper-slide text-center"><img src="../project-images4/storenits/storenits-21.JPG" class="img-fluid" alt=""></a>
                                 </div>
                                 <div class="swiper-pagination swiper-pagination1"></div>
                                 <div class="swiper-button-prev swiper-button-prev1"></div>
