--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <link rel="canonical" href="https://isulalifajri.github.io/" />
         <meta property="og:locale" content="id_ID" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Portofolio Isul Alifajri Izul Alifajri" />
-        <meta property="og:description" content="Ini Adalah Portofolio Isul Alifajri Izul Alifajri yang di buat untuk menampilkan sedikit keahlian saya dalam bahasa pemgrograman" />
+        <meta property="og:title" content="Portofolio Isul Alifajri" />
+        <meta property="og:description" content="Ini Adalah Portofolio Isul Alifajri yang di buat untuk menampilkan sedikit keahlian saya dalam bahasa pemrograman" />
         <meta property="og:url" content="https://isulalifajri.github.io/" />
         <meta property="og:site_name" content="Isul Alifajri Portofolio" />
         <!-- <meta property="og:image" content="img/foto.jpeg" />
@@ -493,6 +493,30 @@
                                 <div class="d-flex align-items-center new-skills px-2">
                                     <img src="images/skill/MySQL.png" class="images-skill p-2" alt="skill isulalifajri" eight="99">
                                     <h3 class="pe-5 text-white">MySQL</h3>
+                                </div>
+                                <div class="d-flex align-items-center new-skills px-2">
+                                    <img src="images/skill/livewire.png" class="images-skill p-2" alt="skill isulalifajri" eight="99">
+                                    <h3 class="pe-5 text-white">Livewire</h3>
+                                </div>
+                                <div class="d-flex align-items-center new-skills px-2">
+                                    <img src="images/skill/postman-icon.webp" class="images-skill p-2" alt="skill isulalifajri" eight="99">
+                                    <h3 class="pe-5 text-white">Postman</h3>
+                                </div>
+                                <div class="d-flex align-items-center new-skills px-2">
+                                    <img src="images/skill/rest-api-icon.webp" class="images-skill p-2" alt="skill isulalifajri" eight="99">
+                                    <h3 class="pe-5 text-white">Rest API</h3>
+                                </div>
+                                <div class="d-flex align-items-center new-skills px-2">
+                                    <img src="images/skill/uml-unified-modeling.webp" class="images-skill p-2" alt="skill isulalifajri" eight="99">
+                                    <h3 class="pe-5 text-white">Unified Modeling Language</h3>
+                                </div>
+                                <div class="d-flex align-items-center new-skills px-2">
+                                    <img src="images/skill/git-bash-logo.png" class="images-skill p-2" alt="skill isulalifajri" eight="99">
+                                    <h3 class="pe-5 text-white">Git Bash</h3>
+                                </div>
+                                <div class="d-flex align-items-center new-skills px-2">
+                                    <img src="images/skill/visul-studio-code.png" class="images-skill p-2" alt="skill isulalifajri" eight="99">
+                                    <h3 class="pe-5 text-white">Visual Studio Code</h3>
                                 </div>
                             </div>
                         </div>
